--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.7",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
